--- a/debian/rules
+++ b/debian/rules
@@ -21,5 +21,5 @@
 # dh_make generated override targets
 # This is example for Cmake (See https://bugs.debian.org/641051 )
 override_dh_auto_configure:
-	dh_auto_configure -- 	-DCMAKE_BUILD_TYPE=$BUILD_TYPE -DBUILD_FAST=$BUILD_FAST
+	dh_auto_configure -- 	-DCMAKE_BUILD_TYPE="Release" -DBUILD_FAST="ON"
 
