Commit to remove

--- a/.travis.yml
+++ b/.travis.yml
@@ -24,9 +24,11 @@ matrix:
         - cd ..
         - sudo apt-get install dpkg-dev
         - wget -O- http://travis.debian.net/script.sh | sh -
+        - cd release
         - export RELEASE_TAR_FILE=$(ls *.tar.gz)
         - export RELEASE_DSC_FILE=$(ls *.dsc)
         - export RELEASE_DEB_FILE=$(ls *.deb)
+        - cd ..
       deploy:
         provider: releases
         skip_cleanup: true
