Removed some option files

--- a/debian/control
+++ b/debian/control
@@ -10,15 +10,15 @@ Homepage: <insert the upstream URL, if relevant>
 
 Package: bee2-dev
 Section: libdevel
-Architecture: any
-Multi-Arch: same
+Architecture: all
+Multi-Arch: allowed
 Depends: bee2 (= ${binary:Version}), ${misc:Depends}
 Description: <insert up to 60 chars description>
  <insert long description, indented with spaces>
 
 Package: bee2
-Architecture: any
-Multi-Arch: same
+Architecture: all
+Multi-Arch: allowed
 Depends: ${shlibs:Depends}, ${misc:Depends}
 Description: <insert up to 60 chars description>
  <insert long description, indented with spaces>
