--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,7 @@ language: c
 branches:
   only:
     - master
+    - dev
 
 env:
   global:
@@ -16,7 +17,7 @@ matrix:
     - os: linux
       env:
         - TRAVIS_DEBIAN_TARGET_DIR="./release"
-        - LIBRARY_VERSION="v1.6.5"
+        - LIBRARY_VERSION="v1.7.0"
       sudo: required
       services:
         - docker
@@ -38,6 +39,9 @@ matrix:
         on:
           repo: MaryAlex/bee2
           branch: master
+        branches:
+          except:
+            - dev
     - os: linux
       compiler: gcc
       env:
